# testBGFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
